# s3a_workflows

./: .git-blame-ignore-revs  README.md  main.py  pyproject.toml  requirements-pinned.txt  requirements-unreleased.txt  requirements.txt  setup.py
config-templates/: config.alg
fpic-paper-2021/: bbox-linknet.yml  config.alg  datagen.yml  lda-all.yml  lda-designator.yml  lda.yml  main.py  semantic-linknet.yml
s3awfs/: __init__.py  __main__.py  compimgs.py  constants.py  fmtinput.py  generic.py  imagefeats.py  main.py  plugins.py  png.py  regionpropfeats.py  tvtsplit.py  utils.py
s3awfs/models/: __init__.py  common.py  linknet.py
s3awfs/models/linknet/: arch.py  train.py
s3awfs/models/tensorflow/: __init__.py  datagen.py  train.py
s3awfs/workflows/: __init__.py  compimgs.py  constants.py  fmtinput.py  imagefeats.py  png.py  regionpropfeats.py  tvtsplit.py  utils.py
s3awfs/workflows/models/: common.py
s3awfs/workflows/models/linknet/: train.py
src/: constants.py  getdata.py  getsubimgs.py  imagefeats.py  main.py  regionpropfeats.py  utils.py  viz.py
src/features/: __init__.py  imagefeats.py  regionpropfeats.py
src/models/: common.py
src/models/linknet/: __init__.py  arch.py  train.py
workflows/: __init__.py  compimgs.py  constants.py  fmtinput.py  imagefeats.py  png.py  regionpropfeats.py  trainvaltest.py  tvtsplit.py  utils.py
workflows/features/: __init__.py  imagefeats.py  regionpropfeats.py
workflows/models/: common.py
workflows/models/linknet/: __init__.py  train.py
