[tool.poetry]
name = "s3a-workflows"
version = "0.1.0"
description = "Facilitates hierarchical, modular workflows interacting with S3A"
authors = ["Nathan Jessurun <ntjessu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
scikit-learn = "^1.0"
s3a = ">=0.5.2"
utilitys = ">=0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
