[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "s3a-workflows"
description = "Modular, hierarchical S3A data workflows"
authors = [
    {name = "Nathan Jessurun", email = "ntjessu@gmail.com"}
]
readme = "README.md"
urls = {homepage = "https://gitlab.com/s3a/s3a-workflows"}
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "imageio",
    "numpy            >= 1.0",
    "pandas           >= 1.0",
    "Pillow",
    "pyqtgraph",
    "ruamel.yaml      >= 0.17.0",
    "s3a              >= 0.6.1",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "qtextras         >= 0.6.5",
    "tqdm",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
full = [
    "PySide6 >= 6.2.0",
]

[tool.setuptools.dynamic]
version = { attr = "s3awfs.__version__" }

[tool.isort]
profile = "black"
reverse_relative = true
combine_as_imports = true
